fixed chat overflow  behavior

--- a/src/routes/whats-clone/components/chat/chat-footer/index.scss
+++ b/src/routes/whats-clone/components/chat/chat-footer/index.scss
@@ -2,7 +2,7 @@
   background: #f0f0f0;
   position: fixed;
   width: 64.5%;
-  bottom: 10;
+  bottom: 60px;
   .chat-input-wrapper {
     padding: 10px;
     height: 60px;
